align button over feed image, still need to figure out distortion issue

--- a/backend/static/css/input.css
+++ b/backend/static/css/input.css
@@ -136,6 +136,14 @@ display: inline-block;
   padding: 8% 5%;
 }*/
 
+.camera-feed {position: relative;}
+
+.camera-feed .turn-on-feed-btn {
+    position: absolute;
+    top: 0px; /*your button position*/
+    left: 0px; /*your button position*/
+}
+
 .live-feed
 {
 	float:left;
